# ccal

./: AGENTS.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: release.yml
docs/: ideas.md
docs/plans/: calendar.md  live-notes.md  mobile-app.md  web-interface.md
packaging/: ccal.rb  release.sh
src/: app.rs  cal_sync.rs  calendar.rs  config.rs  lib.rs  main.rs  models.rs  server_mcp.rs  store.rs  sync_client.rs  ui.rs
tests/: conformance.rs  sync_client_transport.rs  sync_e2e.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: config.ts  main.tsx  schema.ts  storage.ts  store.ts  sync.ts
web/src/ui/: App.tsx  FolderTree.tsx  NoteEditor.tsx  TodoList.tsx  styles.css  useIsMobile.ts
web/test/: conformance.ts  run-conformance.sh
