[package]
name = "ccal"
version = "0.1.0"
edition = "2021"

[lib]
name = "ccal"
path = "src/lib.rs"

[[bin]]
name = "ccal"
path = "src/main.rs"

[[bin]]
name = "import-bear"
path = "src/bin/import-bear.rs"

[dependencies]
automerge = "0.7"
uuid = { version = "1", features = ["v4"] }
directories = "5"
anyhow = "1"

# TUI binary only. crossterm is used via `ratatui::crossterm` so versions
# stay aligned with both ratatui and edtui.
ratatui = "0.30"
edtui = "0.11"

# import-bear binary only
serde_json = "1"
