[package]
name = "ccal"
version = "0.1.0"
edition = "2021"

[lib]
name = "ccal"
path = "src/lib.rs"

[[bin]]
name = "ccal"
path = "src/main.rs"

[[bin]]
name = "import-bear"
path = "src/bin/import-bear.rs"

[[bin]]
name = "ccal-server"
path = "src/bin/ccal-server.rs"

[dependencies]
automerge = "0.7"
uuid = { version = "1", features = ["v4"] }
directories = "5"
anyhow = "1"

# Optional TOML config shared by the TUI and the server (see src/config.rs).
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# TUI binary only. crossterm is used via `ratatui::crossterm` so versions
# stay aligned with both ratatui and edtui.
ratatui = "0.30"
edtui = "0.11"
# Blocking WebSocket client for the background sync thread (no TLS / no
# tokio: ws:// only, intended to run inside Tailscale). Default features
# only — adding wss:// later means a TLS feature here, not a rewrite.
tungstenite = "0.24"

# import-bear binary only
serde_json = "1"

# ccal-server binary only. axum brings its own WebSocket support, so no
# separate tungstenite. Lib stays tokio-free; all async lives in the binary.
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net"] }

# ccal-server binary only — the optional embedded MCP server. rmcp's
# streamable-HTTP transport is a generic `tower` Service (http/hyper v1,
# Error = Infallible) so it nests straight into the existing axum 0.7
# router; no axum bump, the proven WS sync path is untouched. MCP mutations
# go through `ccal::Store` and the server's existing change-broadcast, so
# edits an assistant makes appear live in every connected TUI. Opt-in
# (CCAL_MCP / `[server] mcp`); absent ⇒ this code never runs.
rmcp = { version = "1.7", features = ["server", "transport-streamable-http-server", "macros"] }
tokio-util = "0.7"

[dev-dependencies]
# End-to-end test drives the real ccal-server binary over WebSockets.
tokio-tungstenite = "0.24"
futures-util = "0.3"
